# XHS_WECHAT

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: social-ingestion-smoke-test.prompt.md
.github/skills/social-media-ingestion/: SKILL.md
docs/: setup-and-operations.md
docs/architecture/: sequence-diagrams.md
docs/integration/: node-50-network-recovery.md  vendor-dependency-management.md  wechat-rpa-node-contract.md
openclaw/skills/: social_media_ingestion.yaml
scripts/: agent_smoke_test.py  bootstrap_bitable_schema.py  check_bitable_schema.py  check_wechat_real_mode.py  demo_wechat_rpa_node_test.py  repair_windows_network.ps1  sync_vendor_repos.py  test_bitable_write.py
src/social_ingestion_mcp/: config.py  errors.py  models.py  server.py
src/social_ingestion_mcp/adapters/: bitable_adapter.py  media_pipeline.py  wechat_rpa_adapter.py  xhs_adapter.py
src/social_ingestion_mcp/rpa_node/: __init__.py  automation.py  models.py  server.py  service.py
src/social_ingestion_mcp/services/: orchestrator.py  rpa_queue.py
